--- a/KNearestNeighborRegressor.ipynb
+++ b/KNearestNeighborRegressor.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9de08fcd",
+   "id": "ae6aa5bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "df590b63",
+   "id": "db48eb02",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8cc74937",
+   "id": "4986c96b",
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "758320cc",
+   "id": "490b937d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "6587b2c2",
+   "id": "7afd189b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "92b1f6d0",
+   "id": "a04572d6",
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "f4ce46eb",
+   "id": "e8ee0787",
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d7479fd3",
+   "id": "0fc6d0fb",
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "facc1ba8",
+   "id": "c96695a7",
    "metadata": {},
    "outputs": [
     {
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2567463f",
+   "id": "87e7b164",
    "metadata": {},
    "source": [
     "### Correlation Matrix with Heatmap"
@@ -525,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "d937e763",
+   "id": "981b1dae",
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "697ffd7d",
+   "id": "8964de35",
    "metadata": {},
    "outputs": [
     {
@@ -573,7 +573,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "9c704323",
+   "id": "1c54b7a8",
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +600,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "d355ac8c",
+   "id": "e9d74540",
    "metadata": {},
    "outputs": [
     {
@@ -715,7 +715,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "ae76aca7",
+   "id": "115445ae",
    "metadata": {},
    "outputs": [
     {
@@ -734,7 +734,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "7f44f655",
+   "id": "48563376",
    "metadata": {},
    "outputs": [
     {
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b7268a2",
+   "id": "a03b4856",
    "metadata": {},
    "source": [
     "## K Nearest Neighbor Regression"
@@ -766,7 +766,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "5137c438",
+   "id": "6800fef6",
    "metadata": {},
    "outputs": [
     {
@@ -813,7 +813,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8e5574b",
+   "id": "6d23e01b",
    "metadata": {},
    "source": [
     "### Train Test split"
@@ -822,7 +822,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "7f80bd68",
+   "id": "f03d045f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -833,7 +833,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "63adb168",
+   "id": "68e5aee3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -843,7 +843,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "e2aed7f7",
+   "id": "92858ce7",
    "metadata": {},
    "outputs": [
     {
@@ -868,7 +868,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "fa7a6729",
+   "id": "e21e5ae8",
    "metadata": {},
    "outputs": [
     {
@@ -886,7 +886,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "efaf6e9d",
+   "id": "c2a8566a",
    "metadata": {
     "scrolled": true
    },
@@ -906,7 +906,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "933796b8",
+   "id": "d103608c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -917,7 +917,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "61f9452f",
+   "id": "d7eea681",
    "metadata": {},
    "outputs": [
     {
@@ -937,7 +937,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61a1fd7f",
+   "id": "b5479b1e",
    "metadata": {},
    "source": [
     "#### Model Evaluation"
@@ -946,7 +946,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "3b071abe",
+   "id": "fd89d2bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -956,7 +956,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "39e029ec",
+   "id": "49ae6b1c",
    "metadata": {},
    "outputs": [
     {
@@ -1004,7 +1004,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "fede336c",
+   "id": "bbb01482",
    "metadata": {},
    "outputs": [
     {
@@ -1034,7 +1034,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "895e38e0",
+   "id": "ce65a48a",
    "metadata": {},
    "source": [
     "### Hyperparameter Tuning"
@@ -1043,7 +1043,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "d9782268",
+   "id": "6061335b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1060,7 +1060,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "de2d57b0",
+   "id": "4a753277",
    "metadata": {},
    "outputs": [
     {
@@ -1100,7 +1100,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "a98bfcf3",
+   "id": "c4f7ffc0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1114,7 +1114,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "4209bb31",
+   "id": "f85e55a8",
    "metadata": {},
    "outputs": [
     {
@@ -1162,7 +1162,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "d31603f4",
+   "id": "2d4f10ed",
    "metadata": {},
    "outputs": [
     {
@@ -1193,7 +1193,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "9a6c31fa",
+   "id": "cf01dc9d",
    "metadata": {},
    "outputs": [
     {
@@ -1216,7 +1216,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "6d9889a9",
+   "id": "ad4a4de4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1230,7 +1230,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "11b3edc5",
+   "id": "7fa59b43",
    "metadata": {},
    "outputs": [
     {
@@ -1278,7 +1278,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "7b394d33",
+   "id": "cf7ec712",
    "metadata": {},
    "outputs": [
     {
@@ -1309,7 +1309,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "1b78e610",
+   "id": "58780bff",
    "metadata": {},
    "outputs": [
     {
@@ -1332,7 +1332,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "8be0d04d",
+   "id": "2cbac305",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1342,7 +1342,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "3c2bbfbc",
+   "id": "9f1d0afc",
    "metadata": {},
    "outputs": [
     {
@@ -1363,8 +1363,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 40,
+   "id": "38a0fee4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "1f37b8f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'rf_random' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[41], line 5\u001b[0m\n\u001b[0;32m      2\u001b[0m file \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrandom_forest_regression_model.pkl\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mwb\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# dump information to that file\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m pickle\u001b[38;5;241m.\u001b[39mdump(\u001b[43mrf_random\u001b[49m, file)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'rf_random' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# open a file, where you ant to store the data\n",
+    "file = open('random_forest_regression_model.pkl', 'wb')\n",
+    "\n",
+    "# dump information to that file\n",
+    "pickle.dump(rf_random, file)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "93e75936",
+   "id": "0b90bf99",
    "metadata": {},
    "outputs": [],
    "source": []
